--- a/css/styles.css
+++ b/css/styles.css
@@ -29,9 +29,11 @@ body, html {
       position: fixed;
       top: 0;
       width: 100%;
-      height: 60px; /* Define header height */
+      height: 120px; /* Define header height */
       background-color: #fff;
       z-index: 1000;
+      display: flex;
+      flex-direction: column;
   }
 
     .header-content {
@@ -41,13 +43,7 @@ body, html {
         padding: 10px;
     }
 
-    .hambuger-button{
-        border: none;
-        cursor: pointer;
-        color: #363636; 
-        background-color: transparent;
-        font-size: 24px; 
-    }
+    
 
     .logo {
         height: 40px;
@@ -58,46 +54,42 @@ body, html {
         border-radius: 50%;
     }
 
-    .side-menu {
-        position: absolute;
-        top: 50px; 
-        left: 10px; 
-        width: 200px;
-        background-color: #fff;
-        color: rgb(39, 38, 38);
-        padding: 10px;
-        border-radius: 5px;
-        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-        z-index: 1001;
-        display: none; 
-    }
+  .nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    /* border-bottom: 1px solid #ccc; */
+    padding: 10px 0;
+  }
 
-    .side-menu.open {
-        display: block;
-    }
+  .nav-bar ul {
+    display: flex;
+    list-style-type: none;
+    margin:0;
+    padding:0;
+    width: 100%;
+    justify-content: space-evenly;
+  }
 
-    .side-menu nav a {
-        display: block;
-        padding: 10px 0;
-        color: #252525;
-        text-decoration: none;
-        margin-bottom: 5px;
-        border-bottom: 1px solid #555;
-    }
 
-    .close-btn {
-        background: none;
-        border: none;
-        color: #555;
-        font-size: 24px;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        cursor: pointer;
-    }
+  .nav-item {
+    font-size: 14px;
+    font-weight: bold;
+    color:#000000;
+  }
 
-    
-    
+  .nav-item a {
+    text-decoration: none;
+    color: #333;
+    padding: 5px 10px;
+  }
+
+  .nav-item.active a {
+    border-bottom: 3px solid #1C599C; /* Highlight for active tab */
+    color: #1C599C; /* Color for active tab */
+}
+
+
     main {
       position: absolute;
       top: 60px; /* Matches header height */
